--- a/k8s/pod.yaml
+++ b/k8s/pod.yaml
@@ -1,14 +1,10 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: express-pod
+  name: nginx
 spec:
   containers:
-    - name: express
-      image: junereycasuga/node-prom:1.0.0
-      ports:
-        - containerPort: 3000
-          resources:
-            limits:
-              memory: "128Mi"
-              cpu: "500m"
+  - name: nginx
+    image: nginx:1.14.2
+    ports:
+    - containerPort: 80
