--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -5,9 +5,11 @@ metadata:
   labels:
     app: express-prom
 spec:
+  type: NodePort
   selector:
     app: express-prom
   ports:
   - name: web
     port: 80
     targetPort: 3000
+    nodePort: 30001
